--- a/Pages/Shared/_AnalysisResultPartial.cshtml
+++ b/Pages/Shared/_AnalysisResultPartial.cshtml
@@ -1,6 +1,6 @@
 @model AnalisadorJson.Pages.IndexModel
 
-<div class="card mt-4 bg-light">
+<div class="card">
     <div class="card-header">
         <h4>Analysis Results</h4>
     </div>
